Prevent default events and scroll on mobile menu

--- a/wp-content/themes/canadianadventureco/sass/_header.scss
+++ b/wp-content/themes/canadianadventureco/sass/_header.scss
@@ -126,3 +126,7 @@
 		padding: 0.75rem;
 	}
 }
+
+.no-scroll {
+	overflow: hidden;
+}
